# refactor

./: .env  .pre-commit-config.yaml  README.md  docker-compose.yaml  production.yaml  pyproject.toml
app/: __init__.py
app/configuration/: __init__.py  events.py  server.py
app/internal/pkg/clients/: __init__.py  baseclient.py
app/internal/pkg/middlewares/: handle_http_exceptions.py  static.py  (+1 more)
app/internal/repository/: __init__.py  repository.py
app/internal/routes/: __init__.py  requests.py
app/internal/services/: __init__.py  requests.py
app/pkg/connectors/: __init__.py  base_connector.py  postgres.py
app/pkg/logger/: __init__.py  logger.py
app/pkg/models/: __init__.py  centrifugo_server.py  logger.py  requests.py
app/pkg/settings/: __init__.py  settings.py
docker/api/: Dockerfile
docker/postgres_migrations/: Dockerfile
migrations/: 20230315_01_g5FFK-create-requests.py  20230321_01_ZywyW-alter-requests-add-creator-updator.py  20230321_02_T6cwj-alter-requests-add-type.py  20230322_01_84MVz-alter-requests-add-telegram-ids.py  20230323_01_MZ2MX-alter-requests-set-default-messages-ids.py  20230329_01_d8hyw-delete-all-bad-requests.py  20230413_01_ROaQO-alter-requests-upd.py  20230413_02_RtcJP-add-comments-table_upd.py  20230414_01_VZlyy-add-tags-table.py  20230414_02_gSAwf-tags-initial-data.py  20230414_03_Fd6dV-add-request-vectors-table.py  20230414_04_HtG8z-add-tag-request-table.py  20230419_02_KWdne-add-default-values_updated.py  20230601_01_jC0Qt-add-column-deadline.py  20230717_01_h9r2M-add-column-creator-role.py
scripts/: migrate.py
(+25 files in other folders)
